data/derived/sp14/progs/unify/prog3882.ml.out
Characters 94-139:
  then x/(float_of_int 10 ** float_of_int (numdig -1)) mod 10 :: l
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
